# chemkin2suth

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chemkin2suth/: __init__.py  cli.py  converter.py
